--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-
-
-/* Star seletor maybe not best practice. To re-visit */
-/* You can probably do this layout better with grid. Reduce text in sections to air out a bit. To re-visit*/
-
 * {
     margin: 0;
     padding: 0;
@@ -41,44 +36,6 @@ p {
     font-size: 4.5vw;
 }
 
-@media screen and (max-width: 875px) {
-    .flex ul {
-        display: none;
-    }
-
-    .main {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .hero-image {
-        height: 60%;
-    } 
-
-    .hero-text {
-        font-size: 2rem;
-    }
-
-    h2 {
-        font-size: 1.8rem;
-    }
-    }
-
-@media screen and (max-width: 530px) {
-    .hero-image {
-        height: 40%;
-    } 
-    .hero-text {
-        font-size: 1.4rem;
-    }
-}
-
-@media screen and (min-width: 875px) {
-    #openSlideMenu {
-        display: none;
-    }
-    }
-
 li {
     list-style: none;
     padding: 1em;
@@ -116,7 +73,6 @@ a:hover {
     z-index: 1;
     top: 0;
     left: 0;
-    /*background-color: rgba(45, 49, 99, 0.9);*/
     background-image: linear-gradient(rgba(45, 49, 99),#8c3532);
     overflow-x: hidden;
     padding-top: 60px;
@@ -198,9 +154,51 @@ a:hover {
 
 footer {
     display: flex;
-    background: rgb(67, 71, 124);
+    background: rgb(54, 50, 50);
+    padding: 1em;
+    justify-content: center;
 }
 
-.footer {
-    padding: 1em;
+/* Media Queries */
+
+@media screen and (max-width: 875px) {
+    .flex ul {
+        display: none;
+    }
+
+    .main {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .hero-image {
+        height: 60%;
+    } 
+
+    .container {
+        align-items: center;
+    }
+
+    .hero-text {
+        font-size: 2rem;
+    }
+
+    h2 {
+        font-size: 1.8rem;
+    }
+}
+
+@media screen and (max-width: 530px) {
+    .hero-image {
+        height: 40%;
+    } 
+    .hero-text {
+        font-size: 1.4rem;
+    }
+}
+
+@media screen and (min-width: 875px) {
+    #openSlideMenu {
+        display: none;
+    }
 }
