--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body, html {
     height: 100%;
     font-family: 'Source Serif Pro', serif;
     margin: 0;
+    background-color: gray;
     color: white;
 }
 
