--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ footer {
         display: none;
     }
 
-    .main {
+    main {
         display: flex;
         flex-direction: column;
     }
@@ -178,6 +178,7 @@ footer {
 
     .hero-text {
         font-size: 2rem;
+        top: 75%;
     }
 
     h2 {
